--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,18 @@
 .DS_Store
 pkg/
 src/
+
+myvenv/
+
+*.pyc
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
