--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
+alembic==1.6.5
 aniso8601==9.0.1
 click==8.0.1
 Flask==2.0.0
+Flask-Migrate==3.0.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.3
 greenlet==1.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
+Mako==1.1.4
 MarkupSafe==2.0.1
 mysqlclient==2.0.3
+python-dateutil==2.8.1
+python-dotenv==0.17.1
+python-editor==1.0.4
 pytz==2021.1
 six==1.16.0
 SQLAlchemy==1.4.15
 Werkzeug==2.0.1
 WTForms==2.3.3
-
-setuptools~=56.2.0
-python-dotenv~=0.17.1
