--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.env
 *.tar
 *.tar.*
 *.jar
@@ -9,6 +10,8 @@
 *.log.*
 *.sig
 .DS_Store
+.idea
+
 pkg/
 src/
 
@@ -26,5 +29,3 @@ htmlcov/
 dist/
 build/
 *.egg-info/
-
-.env
